# cnpj_insight

./: .env.dev  .env.prod  .env.prod.db  .gitignore  .pylintrc  404.html  Dockerfile  Dockerfile.prod  README.md  README.org  cleaning.py  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  index.html  instructions.txt  manage.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  report.tex  requirements.txt  search.html  sitemap.xml
UML/: 02-CompanyInformationSystem.wsd  06-MetadataPlatform.wsd  07-DataBackupProcess.wsd
cnpj/: admin.py  apps.py  clear_dataset.py  cron.py  documents.py  forms.py  load.py  load_by_pandas.py  models.py  structure.py  testes.ipynb  urls.py  utils.py  views.py  web.py
cnpj/dados/: estabelecimentos_9.xlsx
cnpj/migrations/: 0001_initial.py  0002_alter_empresas_qualificacao_resposavel_and_more.py  0002_remove_empresas_razao_social_limpa.py
cnpj/tests/: test_urls.py  test_views.py
cnpj_insight/: asgi.py  settings.py  urls.py  wsgi.py
diagrams/Classes/: classes_cnpj.dot
diagrams/UseCases/: 01-BusinessSearchSystem.wsd  03-ExportFunctionality.wsd  04-CompanyComparisonFeature.wsd  05-TrustworthinessScoreGeneration.wsd  08-DatabaseExpansion.wsd  09-SearchHistoryFunctionality.wsd  10-Dockerization.wsd
docs/: index.md
legacy/: cleaning.py  load.py
nginx/: nginx.conf
search/: search_index.json
static/css/: styles.css
templates/: base.html  comparision.html  comparison.html  details.html  footer.html  home.html  navbar.html  profile.html  search_compare.html  search_results.html
templates/registration/: logged_out.html  login.html  register.html
