[tool.poetry]
name = "cnpj-insight"
version = "0.1.0"
description = ""
authors = ["Eduardo Adame <eadamesalles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
coverage = "^7.3.2"
django-bootstrap-form = "^3.4"
django-bootstrap-v5 = "^1.0.11"
django-dbbackup = "^4.0.2"
django-crontab = "^0.7.1"
django-cors-headers = "^4.3.1"
django-elasticsearch-dsl = "^8.0"
django-elasticsearch-dsl-drf = "^0.22.5"
django-extensions = "^3.2.3"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.7"}
django = "4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}
psycopg2-binary = "^2.9.9"
elasticsearch = "^8.11.1"
flake8 = "^6.1.0"
gunicorn = "^21.2.0"
lxml = "^4.9.3"
numpy = "^1.26.2"
python-decouple = "^3.8"
pylint-django = "^2.5.5"
setuptools = "^69.0.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
